# cpp-mini-oauth2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  datamodel.h  i_webservice.h  main.cpp  tokenmanager.cpp  tokenmanager.h  webservicefactory.cpp  webservicefactory.h
config/: auth.json
data/: clients.json  refresh_index.ndjson  revocations.ndjson  roles.json  users.json
include/: config.h  datamanager.h  datamodel.h  i_webservice.h  introspectservice.h  paymentservice.h  refreshservice.h  revokeservice.h  tokenmanager.h  tokenservice.h  utils.h  webservicefactory.h
src/: config.cpp  datamanager.cpp  introspectservice.cpp  main.cpp  paymentservice.cpp  refreshservice.cpp  revokeservice.cpp  tokenmanager.cpp  tokenservice.cpp  utils.cpp  webservicefactory.cpp
test_scenarios/: test.py
tests/: test_main.cpp
